girnode: Fix a NULL pointer deference if a namespace can’t be found

https://bugzilla.gnome.org/show_bug.cgi?id=711541